minor fixes / corrected stylesheets

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <header class="layout__header">
         <div class="logo">
             <a href="#" class="logo__link">
-                <svg xmlns="http://www.w3.org/2000/svg" class="logo__icon" viewBox="0 0 362.62 388.52" width="26px"
-                     height="26px">
+                <svg xmlns="http://www.w3.org/2000/svg" class="logo__icon" viewBox="0 0 362.62 388.52" width="35px"
+                     height="35px">
                     <title>header-icon</title>
                     <path d="M156.58 239l-88.3 64.75c-10.59 7.06-18.84 11.77-29.43 11.77-21.19 0-38.85-18.84-38.85-40 0-17.69
                     14.13-30.64 27.08-36.52l103.6-44.74-103.6-45.92C13 142.46 0 129.51 0 111.85 0 90.66 18.84 73 40 73c10.6 0
@@ -31,11 +31,10 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="middle-area__icon" viewBox="0 0 474.15 58.26"
                      width="237.5px" height="30px">
                     <defs>
-                        <style>
-                            .cls-1 {
-                                fill: #222;
-                            }
-                        </style>
+                        <style> {
+                            fill: #222
+                        ;
+                        } </style>
                     </defs>
                     <title>CSS-Tricks</title>
                     <path class="cls-1"
@@ -71,7 +70,7 @@
         </div>
         <div class="search">
             <input class="search__input" type="search" placeholder="flexbox">
-            <button class="search__button" type="submit">
+            <button class="search__button" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" class="search__button-icon" viewBox="0 0 100 100"
                      width="26px" height="26px"><title>icon-search</title>
                     <path d="M80.65 66.78a33.55 33.55 0 0 1-47.44-47.44 33.55 33.55 0 1 1 47.44 47.44zm6.73-54.16a43.06
@@ -86,7 +85,7 @@
                 <li class="content-nav__list-item content-nav__list-item_selected">
                     <a href="#" class="nav-link">
                         <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon_selected" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                             width="35px" height="35px">
                             <path d="M32 3L2 33h9v30h12V47h16v16h12V33h11z"></path>
                         </svg>
                         <span>HOME</span>
@@ -94,8 +93,8 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-pink" viewBox="0 0 64 64"
+                             width="35px" height="35px">
                             <path d="M46 30l17-10v32L46 42v10H1V20h45zM6 28h4M14 28h4"></path>
                             <path d="M7 36h18v10H7zM6 12h26l8 8"></path>
                         </svg>
@@ -104,8 +103,8 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-red" viewBox="0 0 64 64"
+                             width="35px" height="35px">
                             <path fill="none" d="M7 1h46v62H7z"></path>
                             <path fill="none" vector-effect="non-scaling-stroke"
                                   d="M15 63V2M20 15h28M20 21h28"></path>
@@ -115,8 +114,8 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-purple" viewBox="0 0 64 64"
+                             width="35px" height="35px">
                             <path d="M0 54h64V10H0v44zm2-2v-4.544l21.952-19.09 12.156
                                  12.156 6.051-8.068L62 49.459V52H2zm60-40v34.826l-20.16-17.28-5.949 7.932-11.843-11.844L2 44.805V12h60z"></path>
                             <path d="M51 28c3.309 0 6-2.691 6-6s-2.691-6-6-6-6 2.691-6
@@ -128,8 +127,8 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-blue" viewBox="0 0 64 64"
+                             width="35px" height="35px">
                             <path d="M0 64h64.414L0-.414V64zm2-9h6v-2H2v-6h4v-2H2v-6h6v-2H2v-6h4v-2H2v-6h6v-2H2V4.414L59.586 62H2v-7z"></path>
                             <path d="M13 27.586V55h27.414L13 27.586zm2 4.828L35.586 53H15V32.414zM64.375 46.375l-2.472-9.886L25-.414
                                  17.586 7l36.903 36.903 9.886 2.472zm-2.75-2.75l-6.114-1.528L26.414 13 31 8.414l29.097 29.097 1.528 6.114zM25 2.414L29.586 7 25 11.586 20.414 7 25 2.414z">
@@ -140,8 +139,8 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-green" viewBox="0 0 64 64"
+                             width="35px" height="35px">
                             <path d="M10 15h44v2H10zM10 25h44v2H10zM10 35h44v2H10z"></path>
                             <path d="M17 61.174L32.37 48H64V4H0v44h17v13.174zM2 46V6h60v40H31.63L19 56.826V46H2z"></path>
                         </svg>
@@ -150,8 +149,9 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-light-green"
+                             viewBox="0 0 64 64"
+                             width="35px" height="35px">
                             <path d="M64 12H0v39h64V12zm-4.395 2L32 31.81 4.395 14h55.21zM2 49V14.835L32 34.19l30-19.355V49H2z"></path>
                         </svg>
                         <span>NEWSLETTER</span>
@@ -159,8 +159,8 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 64"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-yellow" viewBox="0 0 64 64"
+                             width="35px" height="35px">
                             <path d="M41 37.586L23.414 20l12-12-5.305-5.302-.688.486c-.025.018-2.537 1.769-5.671 1.769-2.244
                                 0-4.277-.896-6.043-2.66L17 1.586-.414 19 12 31.414l10-10L39.586 39l-3 3L57 62.414 64.414 55 44 34.586l-3
                                 3zM2.414 19L17.026 4.388c1.983 1.703 4.241 2.565 6.724 2.565 2.722 0 4.992-1.057 6.103-1.687L32.586 8 12
@@ -171,8 +171,9 @@
                 </li>
                 <li class="content-nav__list-item">
                     <a href="#" class="nav-link">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon" viewBox="0 0 64 56.9"
-                             width="26px" height="26px">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="nav-link__icon _fill-steel-blue"
+                             viewBox="0 0 64 56.9"
+                             width="35px" height="35px">
                             <path d="M1 55.45l21-8 20 8 21-8v-46l-21 8-20-8-21 8v46zM22 1.45v46M42 9.45v46"></path>
                         </svg>
                         <span>GUIDES</span>
@@ -308,19 +309,19 @@
                     <img src="assets/themes/base/img/get-the-newsletter.png" alt="get-the-newsletter">
                 </div>
                 <div class="footer-input">
-                    <input type="search" class="footer-input__search">
-                    <button type="submit" class="footer-input__button">SUBSCRIBE</button>
+                    <input type="search" class="footer-input__search" title="footer-input">
+                    <button type="button" class="footer-input__button">SUBSCRIBE</button>
                 </div>
             </div>
             <div class="footer-newsletter__right">
-                Lots of great stuff that isn't published anywhere else!
+                <div class="footer-newsletter__right-text">Lots of great stuff that isn't published anywhere else!</div>
             </div>
         </section>
         <section class="footer-mediatemple">
             <div class="footer-mediatemple__left"></div>
             <div class="footer-mediatemple__center">
                 <div class="footer-mediatemple__center-img">
-                    <img src="assets/themes/base/img/mediatemple-logo-white-superwide.svg" alt="Media Temple">
+                    <img src="assets/themes/base/img/icons/mediatemple-logo-white-superwide.svg" alt="Media Temple">
                 </div>
             </div>
             <div class="footer-mediatemple__right">
@@ -332,7 +333,7 @@
         <section class="footer-colophon">
             <div class="footer-colophon__left">
                 <svg class="footer-colophon__left-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 362.62 388.52"
-                     width="280px" height="280px">
+                     width="100px" height="100px">
                     <title>footer-icon</title>
                     <path d="M156.58 239l-88.3 64.75c-10.59 7.06-18.84 11.77-29.43 11.77-21.19
                              0-38.85-18.84-38.85-40 0-17.69 14.13-30.64 27.08-36.52l103.6-44.74-103.6-45.92C13
@@ -352,39 +353,42 @@
                         It is built on <a href="#" class="footer-colophon__center-top-link">WordPress</a>,
                         hosted by
                         <a href="#" class="footer-colophon__center-top-link">Media Temple</a>.
-                        It is made possible through <a href="#" class="footer-colophon__center-top-link">sponsorships</a>
+                        It is made possible through <a href="#"
+                                                       class="footer-colophon__center-top-link">sponsorships</a>
                         from products and services we like.</p>
-                    <p>*May or may not contain any actual "CSS" or "Tricks".</p>
+                    <p>
+                        <small>*May or may not contain any actual "CSS" or "Tricks".</small>
+                    </p>
                 </div>
                 <nav class="footer-colophon__center-bottom">
-                    <ul class="footer-colophon__center-bottom_list">
-                        <li class="footer-colophon__center-bottom_list-item">CONTACT</li>
-                        <li class="footer-colophon__center-bottom_list-item">ADVERTISE</li>
-                        <li class="footer-colophon__center-bottom_list-item">SUBSCRIBE</li>
-                        <li class="footer-colophon__center-bottom_list-item">ABOUT</li>
-                        <li class="footer-colophon__center-bottom_list-item">JOBS</li>
-                        <li class="footer-colophon__center-bottom_list-item">RANDOM</li>
-                        <li class="footer-colophon__center-bottom_list-item">ARCHIVES</li>
-                        <li class="footer-colophon__center-bottom_list-item">LICENSE</li>
-                        <li class="footer-colophon__center-bottom_list-item">GUEST POSTING</li>
-                    </ul>
+                    <a href="#" class="footer-colophon__center-bottom-link">CONTACT</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">ADVERTISE</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">SUBSCRIBE</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">ABOUT</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">JOBS</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">RANDOM</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">ARCHIVES</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">LICENSE</a>
+                    <a href="#" class="footer-colophon__center-bottom-link">GUEST POSTING</a>
                 </nav>
             </div>
             <div class="footer-colophon__right">
-                <h4 class="h4">Front-End Jobs</h4>
-                <ul class="footer-colophon__right_job-list">
-                    <li class="footer-colophon__right_job-list-item">
-                        <strong>Sullivan</strong> is hiring a Senior Developer (full-stack)
-                    </li>
-                    <li class="footer-colophon__right_job-list-item">
-                        <strong>WHQ</strong> is hiring a Front End Developer
-                    </li>
-                    <li class="footer-colophon__right_job-list-item">
-                        <strong>Experience-Interaction</strong> is hiring a Full Stack Web Developer
-                    </li>
-                </ul>
-                <button class="footer-colophon__right-button">SEE MORE JOB</button>
-                <button class="footer-colophon__right-button">POST A JOB</button>
+                <div class="jobs-wrapper">
+                    <h4 class="h4">Front-End Jobs</h4>
+                    <ul class="footer-colophon__right_job-list">
+                        <li class="footer-colophon__right_job-list-item">
+                            <strong>Sullivan</strong> is hiring a Senior Developer (full-stack)
+                        </li>
+                        <li class="footer-colophon__right_job-list-item">
+                            <strong>WHQ</strong> is hiring a Front End Developer
+                        </li>
+                        <li class="footer-colophon__right_job-list-item">
+                            <strong>Experience-Interaction</strong> is hiring a Full Stack Web Developer
+                        </li>
+                    </ul>
+                    <button class="footer-colophon__right-button">SEE MORE JOB</button>
+                    <button class="footer-colophon__right-button">POST A JOB</button>
+                </div>
             </div>
         </section>
     </footer>
